tests/NormalTests/paczka1/fuzzy1/42069406.err
Error in line 8: qW9R A104 24,8
Error in line 14: NnHdMsdKS A104 32$,2
Error in line 24: 0790v A104 64,8
Error in line 27: 9Cc S956 6,7
Error in line 31: 9Cc A883 35,9
